--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,5 +1,5 @@
 # Sử dụng image Node.js làm base image
-FROM node:14-alpine
+FROM node:23.6.0-alpine
 
 # Thiết lập thư mục làm việc trong container
 WORKDIR /app
@@ -20,4 +20,4 @@ RUN npm run build
 EXPOSE 2210
 
 # Chạy ứng dụng
-CMD ["npm", "dev"]
+CMD ["npm", "run", "dev"]
