--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "antd": "5.14.1",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "framer-motion": "^12.4.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
